feat: 웹소켓 설정,핸들러,인터셉터 추가

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    // WebSocket
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
     // Thymeleaf (관리 UI 또는 테스트용)
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
