feat : build.gradle 수정

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final' // Hibernate 6 이상일 경우
 
     // DB Driver
+    implementation 'com.mysql:mysql-connector-j:8.1.0'
     implementation 'org.postgresql:postgresql:42.7.3'
 
     // Spring Security
@@ -63,6 +64,9 @@ dependencies {
 
     // AI API 적용
     implementation 'org.springframework.ai:spring-ai-starter-model-openai'
+
+    implementation 'org.springframework.ai:spring-ai-pgvector-store' // PostgerSQL Vetor Store (Pgvector)
+
 
 }
 
