--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,11 +12,26 @@ services:
       - "${POSTGRES_PORT}:5432"
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DATABASE}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - devmountain-postgres-volume:/var/lib/postgresql/data
-    platform: linux/arm64
 
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: devmountain-app
+    ports:
+      - "${APP_PORT}:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: prod
+      REDIS_HOST: redis
+      POSTGRES_HOST: postgres
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    depends_on:
+      - redis
+      - postgres
 
 volumes:
   devmountain-postgres-volume:
