--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,6 +28,15 @@ jobs:
           echo "${{ secrets.EC2_PRIVATE_KEY }}" > ~/.ssh/devmountain-key.pem
           chmod 600 ~/.ssh/devmountain-key.pem
 
+      - name: Git pull on EC2
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/devmountain-key.pem ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
+            cd ~/devmountain
+            git reset --hard HEAD  # 로컬 변경사항 초기화
+            git clean -fd          # 추적되지 않은 파일 제거
+            git pull origin main
+          EOF
+
       - name: Copy .env to EC2
         run: |
           scp -o StrictHostKeyChecking=no -i ~/.ssh/devmountain-key.pem .env ubuntu@${{ secrets.EC2_HOST }}:~/devmountain/.env
@@ -41,7 +50,6 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/devmountain-key.pem ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
             cd ~/devmountain
             docker-compose down
-            git pull origin main
             ./gradlew build -x test
             docker-compose up -d --build
           EOF
