refactor : 임베딩 데이터 저장 타입 변경

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.testcontainers:postgresql'
     implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector'
+    implementation("org.hibernate.orm:hibernate-vector:6.4.0.Final")
 
     //Spring AI
     implementation 'org.springframework.ai:spring-ai-starter-model-openai'
