--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,6 @@ plugins {
     id 'org.springframework.boot' version "${springBootVersion}"
     id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
 }
-ext {
-    springAiVersion = "1.0.0"
-}
 
 group = "${projectGroup}"
 version = "${applicationVersion}"
@@ -24,8 +21,18 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
 }
 
+ext {
+    springAiVersion = "1.0.0-M4"
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
+    }
+}
 
 dependencies {
     // Spring Web + Validation
@@ -63,25 +70,17 @@ dependencies {
     //PostgreSQL + pgvector
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.testcontainers:postgresql'
-    implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector'
     implementation("org.hibernate.orm:hibernate-vector:6.4.0.Final")
 
     //Spring AI
-    implementation 'org.springframework.ai:spring-ai-starter-model-openai'
-
+    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
+    implementation 'org.springframework.ai:spring-ai-pgvector-store-spring-boot-starter'
 }
-
-
 
 bootJar {
     enabled = true
     archiveFileName = 'app.jar' // Dockerfile에서 COPY app.jar 와 일치하게
     mainClass = 'nbc.devmountain.MountainApplication'
-}
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.ai:spring-ai-bom:$springAiVersion"
-    }
 }
 
 tasks.named('test') {
