--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     //Spring AI
     implementation 'org.springframework.ai:spring-ai-starter-model-openai'
 
+    //monitoring
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 
