--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,22 +16,22 @@ services:
     volumes:
       - devmountain-postgres-volume:/var/lib/postgresql/data
 
-#  app:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    container_name: devmountain-app
-#    ports:
-#      - "${APP_PORT}:8080"
-#    environment:
-#      SPRING_PROFILES_ACTIVE: prod
-#      REDIS_HOST: redis
-#      POSTGRES_HOST: postgres
-#      POSTGRES_DB: ${POSTGRES_DB}
-#      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-#    depends_on:
-#      - redis
-#      - postgres
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: devmountain-app
+    ports:
+      - "${APP_PORT}:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: prod
+      REDIS_HOST: redis
+      POSTGRES_HOST: postgres
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    depends_on:
+      - redis
+      - postgres
 
 volumes:
   devmountain-postgres-volume:
