--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ dependencies {
 
     //monitoring
     implementation 'io.micrometer:micrometer-registry-prometheus'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     
     implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
     implementation 'org.springframework.ai:spring-ai-pgvector-store-spring-boot-starter'
