--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     // Thymeleaf (관리 UI 또는 테스트용)
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    testImplementation 'org.springframework.batch:spring-batch-test'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
@@ -78,6 +79,9 @@ dependencies {
     
     implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
     implementation 'org.springframework.ai:spring-ai-pgvector-store-spring-boot-starter'
+
+    //Spring batch
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
     
 }
 
