--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,24 +20,24 @@ services:
     networks:
       - devmonntain-net
 
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: devmountain-app
-    ports:
-      - "${APP_PORT}:8080"
-    environment:
-      SPRING_PROFILES_ACTIVE: prod
-      REDIS_HOST: redis
-      POSTGRES_HOST: postgres
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    depends_on:
-      - redis
-      - postgres
-    networks:
-      - devmonntain-net
+#  app:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    container_name: devmountain-app
+#    ports:
+#      - "${APP_PORT}:8080"
+#    environment:
+#      SPRING_PROFILES_ACTIVE: prod
+#      REDIS_HOST: redis
+#      POSTGRES_HOST: postgres
+#      POSTGRES_DB: ${POSTGRES_DB}
+#      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+#    depends_on:
+#      - redis
+#      - postgres
+#    networks:
+#      - devmonntain-net
 
 volumes:
   devmountain-postgres-volume:
