feat: ngrinder 성능 테스트 설정 + 회원가입 및 로그인 테스트 스크립트 추가

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,12 @@ bin/
 
 src/main/resources/application*.yml
 monitoring/grafana-volume/*
+
+### nGrinder ###
+# nGrinder 바이너리 파일들 (용량이 크므로 직접 다운로드 필요)
+performance/*.war
+performance/*.tar
+*.war
+*.tar
+ngrinder-controller-*.war
+ngrinder-agent-*.tar
