feat: mcp client용 yaml 및 설정 파일 추가
# 유의 사항
- 꼭 api 키를 발급 받고 .env 및 추가 된 파일에 추가해야 함

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ bin/
 
 src/main/resources/application*.yml
 monitoring/grafana-volume/*
+src/main/resources/mcp/tools/youtube-mcp.yaml
+src/main/resources/mcp/tools/mcp-servers-config.json
