--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,11 @@ dependencies {
     //redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation 'org.springframework.ai:spring-ai-redis-store-spring-boot-starter'
+    implementation 'redis.clients:jedis:5.1.0'
+
+    //batch
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
 
     
 }
