--- a/docker-compose.performance.yaml
+++ b/docker-compose.performance.yaml
@@ -20,6 +20,18 @@ services:
       devmountain-perf-net:
         ipv4_address: 172.25.0.10
 
+  redis-stack:
+    image: redis/redis-stack:latest
+    container_name: devmountain-redis-stack
+    ports:
+      - "${REDIS_STACK_PORT}:6379"
+      - "${REDIS_INSIGHT_PORT}:8001"
+    environment:
+      REDIS_STACK_PASSWORD: ${REDIS_STACK_PASSWORD}
+    networks:
+      devmountain-perf-net:
+        ipv4_address: 172.25.0.11
+
   postgres:
     image: ankane/pgvector:latest
     container_name: devmountain-postgres-perf
@@ -45,9 +57,12 @@ services:
       POSTGRES_HOST: 172.25.0.20
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      REDIS_STACK_HOST: 172.25.0.11
+      REDIS_STACK_PASSWORD: ${REDIS_STACK_PASSWORD}
     depends_on:
       - redis
       - postgres
+      - redis-stack
     networks:
       devmountain-perf-net:
         ipv4_address: 172.25.0.30
