--- a/.github/workflows/daily-batch-job.yml
+++ b/.github/workflows/daily-batch-job.yml
@@ -2,7 +2,7 @@ name: daily-batch-job
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 매일 자정(UTC) = 한국 시간 오전 9시
+    - cron: '0 5 * * *'  # 매일 자정(UTC) = 한국 시간 오전 9시
   workflow_dispatch:     # 수동 실행 버튼 활성화
 
 jobs:
@@ -12,74 +12,55 @@ jobs:
     steps:
       - name: 강의 크롤링 Job 실행
         run: |
-          curl -X GET http://localhost:8080/lectures/inflearn 
+          curl -X GET ${{ secrets.INFLEARN_URL }}
 
       - name: 임베딩 Job 실행
         run: |
-          curl -X POST http://localhost:8080/lectures/embedding
+          curl -X POST ${{ secrets.EMBEDDING_URL }}
 
       - name: Notify Slack on Success
         if: success()
         id: slack-success
-        uses: slackapi/slack-github-action@v1.24.0
+        uses: slackapi/slack-github-action@v2.1.0
         with:
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-type: incoming-webhook
           payload: |
-            {
-              "channel": "채널 ID",
-              "attachments": [
-                {
-                  "color": "#36a64f", # 성공시 연두색
-                  "title": "${{ github.repository }}", # 제목은 깃헙 레포지토리
-                  "title_link": "https://github.com/${{github.repository}}", # 제목 클릭시 레포지토리로 이동
-                  "text": "배치 스케줄링 성공",
-                  "fields": [
-                    {
-                      "title": "Repository",
-                      "value": "${{ github.repository }}",
-                      "short": true
-                    },
-                    {
-                      "title": "Tag",
-                      "value": "${{ github.ref_name }}",
-                      "short": true
-                    }
-                  ]      
-                }
-              ]
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+            text: "✅ 배치 스케줄링 성공"
+            blocks:
+              - type: section
+                text:
+                  type: mrkdwn
+                  text: "*✅ 배치 스케줄링 성공했습니다!*"
+              - type: section
+                fields:
+                  - type: mrkdwn
+                    text: "*Repository:*\n<https://github.com/${{ github.repository }}|${{ github.repository }}>"
+                  - type: mrkdwn
+                    text: "*Tag:*\n${{ github.ref_name }}"
+              - type: context
+                elements:
+                  - type: mrkdwn
+                    text: "이 메시지는 GitHub Actions에 의해 자동 전송되었습니다."
+
 
       - name: Notify Slack on Failure
         if: failure() # 이 step은 job이 실패한 경우에만 실행됩니다.
         id: slack-failure
-        uses: slackapi/slack-github-action@v1.24.0
+        uses: slackapi/slack-github-action@v2.1.0
         with:
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-type: incoming-webhook
           payload: |
-            {
-              "channel": "채널 ID",
-              "attachments": [
-                {
-                  "color": "#ff0000", # 실패시 빨간색
-                  "title": "${{ github.repository }}", # 제목은 깃헙 레포지토리
-                  "title_link": "https://github.com/${{github.repository}}", # 제목 클릭시 레포지토리로 이동
-                  "text": "배치 스케줄링 실패",
-                  "fields": [
-                    {
-                      "title": "Repository",
-                      "value": "${{ github.repository }}",
-                      "short": true
-                    },
-                    {
-                      "title": "Tag",
-                      "value": "${{ github.ref_name }}",
-                      "short": true
-                    }
-                  ]      
-                }
-              ]
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }} //아직 설정 안 함
-          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+            text: "❌ 배치 스케줄링 실패"
+            blocks:
+              - type: section
+                text:
+                  type: mrkdwn
+                  text: "*❌ 배치 스케줄링에 실패했습니다.*"
+              - type: section
+                fields:
+                  - type: mrkdwn
+                    text: "*Repository:*\n<https://github.com/${{ github.repository }}|${{ github.repository }}>"
+                  - type: mrkdwn
+                    text: "*Tag:*\n${{ github.ref_name }}"
