--- a/docker-compose.monitoring.yml
+++ b/docker-compose.monitoring.yml
@@ -12,7 +12,7 @@ services:
       - "--web.enable-lifecycle"
     restart: always
     networks:
-      - devmonntain-net
+      - devmountain-net
     user: root
 
   grafana:
@@ -22,7 +22,7 @@ services:
       - ./monitoring/grafana-volume:/var/lib/grafana
     restart: always
     networks:
-      - devmonntain-net
+      - devmountain-net
     ports:
       - "${GRAFANA_PORT}:3000"
     environment:
@@ -37,8 +37,8 @@ services:
     ports:
       - "${EXPORTER_PORT}:9100"
     networks:
-      - devmonntain-net
+      - devmountain-net
 
 networks:
-  devmonntain-net:
+  devmountain-net:
     external: true
