--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ bin/
 .DS_Store
 
 .env
-
+src/main/resources/db/migration/V2__create_batch_tables.sql
 src/main/resources/application*.yml
 monitoring/grafana-volume/*
 src/main/resources/mcp/tools/youtube-mcp.yaml
@@ -55,3 +55,4 @@ ngrinder-controller-*.war
 ngrinder-agent-*.tar
 
 mcp-dist
+
