feat: zookeeper 컨테이너 추가

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,6 +65,14 @@ services:
       - redis
       - postgres
       - redis-stack
+      - zookeeper
+    networks:
+      - devmountain-net
+
+  zookeeper:
+    image: zookeeper:3.8
+    ports:
+        - "2181:2181"
     networks:
       - devmountain-net
 
