feat : 그라파나 모니터링 시각화 코드 추가

--- a/docker-compose.monitoring.yml
+++ b/docker-compose.monitoring.yml
@@ -39,6 +39,21 @@ services:
     networks:
       - devmountain-net
 
+  redis-exporter:
+    image: oliver006/redis_exporter
+    container_name: redis-exporter
+    restart: always
+    ports:
+      - "${REDIS_EXPORTER_PORT}:9121"
+    environment:
+      - REDIS_ADDR=redis://redis:6379
+      - REDIS_EXPORTER_INCL_KEY_PATTERN=lecture:*
+      - REDIS_EXPORTER_INCL_KEYS=1
+    networks:
+      - devmountain-net
+
+
+
 networks:
   devmountain-net:
     external: true
