--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -14,3 +14,6 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['devmountain-app:8080']
+  - job_name: 'redis-exporter'
+    static_configs:
+      - targets: ['redis-exporter:9121']
